--- a/index.html
+++ b/index.html
@@ -3,9 +3,32 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>calculator</title>
+    <link rel="stylesheet" href="style.css">
+    <script src="script.js" defer></script>
 </head>
 <body>
+    <div class="parent">
+        <div class="display" id="results"></div>
+        <div class="calc-wrap">
+            <button id="btn-1">1</button>
+            <button id="btn-2">2</button>
+            <button id="btn-3">3</button>
+            <button id="btn-4">4</button>
+            <button id="btn-5">5</button>
+            <button id="btn-6">6</button>
+            <button id="btn-7">7</button>
+            <button id="btn-8">8</button>
+            <button id="btn-9">9</button>
+            <button id="btn-0">0</button>
+            <button id="btn-">-</button>
+            <button id="btn+">+</button>
+            <button id="btn*">*</button>
+            <button id="btn/">/</button>
+            <button id="btn=">=</button>
+            <button id="btn-clr">CE</button>
+        </div>
+    </div>
     
 </body>
 </html>
